--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(assignment1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(assignment1 src/main.cpp src/Graph.cpp src/Session.cpp src/Tree.cpp src/Agent.cpp)
+add_executable(assignment1 src/main.cpp src/Graph.cpp src/Session.cpp src/Tree.cpp src/Agent.cpp include/json.hpp src/treeMainStudents.cpp)
+
