--- a/config1.json
+++ b/config1.json
@@ -1,6 +1,6 @@
-{"agents":[["V",0],["C",-1]],
-  "graph":[
-    [0,1,0,0,1,0,0,0,0],
+{"agents":[["V",0],["C",0]],
+  "graph":
+   [[0,1,0,0,1,0,0,0,0],
     [1,0,1,1,0,1,1,0,0],
     [0,1,0,1,0,1,0,0,0],
     [0,1,1,0,0,1,0,0,0],
@@ -8,4 +8,4 @@
     [0,1,1,1,1,0,0,1,0],
     [0,1,0,0,0,0,0,1,1],
     [0,0,0,0,0,1,1,0,0],
-    [0,0,0,0,0,0,1,0,0]],"tree":"M"}
+    [0,0,0,0,0,0,1,0,0]],"tree":"C"}
